# dashboard-odoo

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  INDEX.md  README.md  alembic.ini  demo_error_reporting.py  demo_full_reporting.py  demo_schema_discovery.py  docker-compose.yml  pyproject.toml  requirements.txt
config/: control_tower.yaml  models.yaml  purchase.yaml
docs/: API_MISMATCH_REPORT.md  ARCHITECTURE.md  BUSINESS_FLOW.md  CHATGPT_HANDOFF_REPORT.md  DASHBOARD_DATA_CONTRACT.md  DASHBOARD_PAGE_1_INTERNAL_ORDER_TRACEABILITY.md  DATA_QUALITY_INVESTIGATION.md  DATA_TRUTH_LAYER_REVIEW.md  DOCUMENT_AUTHORITY_MATRIX.md  FINAL_ARCHITECTURE.md  INTERNAL_ORDER_TRACEABILITY_INVESTIGATION.md  MIGRATION_GUIDE.md  PROJECT_STATUS.md  SALES_ORDER_DASHBOARD_CONCEPT.md  SALES_ORDER_TRACEABILITY_ARCHITECTURE.md  analytics_architecture.md  architecture_validation.md  developer_guide.md  nullable_fix_report.md  operations_guide.md
migrations/: env.py
scripts/: analyze_control_tower_gaps.py  check_errors.py  diagnose_sync_state.py  enrich_po_cancellation_date_order.py  export_control_tower_diagnostics.py  reconcile_po_cancellation.py  repair_schema.py  run_control_tower_refresh.py  validate_control_tower.py
sql/: 01_base_views.sql  02_traceability_views.sql  03_validation_queries.sql  04_dashboard_traceability_views.sql  05_sales_order_dashboard_views.sql  06_job_order_cost_rekap_views.sql  07_internal_order_cost_rekap_views.sql  09_control_tower_sop_validation_v0.sql  10_control_tower_runtime_hardening_v01.sql  11_control_tower_io_lineage_hardening_v012.sql  12_control_tower_po_2026_scope.sql  README.md
src/: api.py  control_tower_app.py  main.py
tests/: conftest.py  test_config_models.py  test_control_tower_frontend.js  test_control_tower_frontend.py  test_control_tower_relation_extractor.py  test_control_tower_service.py  test_dashboard_api.py  test_error_reporter_api.py  test_error_reporting.py  test_error_reporting_redesign.py  test_field_validation.py  test_identifier_generation.py  test_incremental_sync_flow.py  test_metadata_discovery.py  test_null_constraint_migration.py  test_nullable_sync.py  test_odoo_client.py  (+13 more)
(+114 files in other folders)
