[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odoo-postgres-sync"
version = "1.0.0"
description = "Metadata-driven Odoo to PostgreSQL synchronization platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["odoo", "postgresql", "sync", "etl", "synchronization"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "SQLAlchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "APScheduler>=3.10.4",
    "structlog>=24.1.0",`r`n    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "isort>=5.13.2",
    "mypy>=1.8.0",
]
all = [
    "odoo-postgres-sync[api,dev]",
]

[project.scripts]
odoo-sync = "src.main:main"
odoo-sync-scheduler = "src.engine.scheduler:run_scheduler"
odoo-sync-api = "src.api:app"

[project.urls]
Homepage = "https://github.com/your-org/odoo-postgres-sync"
Documentation = "https://github.com/your-org/odoo-postgres-sync#readme"
Repository = "https://github.com/your-org/odoo-postgres-sync"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["**/*.yaml", "**/*.mako"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
